Implemented TCP client support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,12 @@ add_executable(netdog
         src/server/server_runner.c
         include/server/server_client_runner.h
         src/server/server_client_runner.c
+        include/client/client_initializer.h
+        src/client/client_initializer.c
+        include/client/client_runner.h
+        src/client/client_runner.c
+        include/utils/comm_utils.h
+        src/utils/comm_utils.c
 )
 
 target_include_directories(netdog PRIVATE include)
